--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,12 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@types/express": "^4.17.21",
+    "@types/uuid": "^9.0.8",
+    "express": "^4.19.2",
+    "socket.io": "^4.7.5",
     "tsc": "^2.0.4",
+    "uuid": "^9.0.1",
     "yarn": "^1.22.22"
   }
 }
