--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "@types/express": "^4.17.21",
     "@types/uuid": "^9.0.8",
     "express": "^4.19.2",
+    "peer": "^1.0.2",
     "socket.io": "^4.7.5",
     "tsc": "^2.0.4",
     "uuid": "^9.0.1",
